--- a/admin/nations.html
+++ b/admin/nations.html
@@ -1,5 +1,5 @@
 <!-- nations.html
-     Summary: Admin page for creating and editing nations.
+     Summary: Admin page for creating and editing nations with flag uploads.
      Structure: login, navbar with profile menu, sidebar navigation and nation CRUD card.
      Usage: Visit /admin/nations.html after logging in. -->
 <!DOCTYPE html>
@@ -45,9 +45,10 @@
     <main id="mainContent">
       <section class="card">
         <h2>Nations</h2>
-        <p class="instructions">Add, edit or delete nations.</p>
+        <p class="instructions">Add, edit or delete nations. Upload a flag image to represent each nation.</p>
         <div id="nationList"></div>
         <input id="nationName" placeholder="Name">
+        <input type="file" id="nationFlag" accept="image/*">
         <button id="addNationBtn">Add Nation</button>
       </section>
     </main>
