--- a/admin/nations.html
+++ b/admin/nations.html
@@ -1,7 +1,7 @@
 <!-- nations.html
      Summary: Admin page for creating and editing nations with flag emoji selection.
-     Structure: login, navbar with profile menu, sidebar navigation and nation CRUD card.
-     Usage: Visit /admin/nations.html after logging in. Choose a flag emoji from the list
+     Structure: navbar with profile menu, sidebar navigation and nation CRUD card.
+     Usage: Visit /admin/nations.html to manage nations. Choose a flag emoji from the list
             to represent each nation. -->
 <!DOCTYPE html>
 <html lang="en">
@@ -27,16 +27,7 @@
     </div>
   </nav>
 
-  <div id="login">
-    <h2>Admin Login</h2>
-    <form id="loginForm">
-      <input type="password" id="password" placeholder="Password" required>
-      <button id="loginBtn" type="submit">Login</button>
-    </form>
-    <div id="loginError" role="alert"></div>
-  </div>
-
-  <div id="app" style="display:none">
+  <div id="app">
     <aside id="sidebar">
       <a href="admin.html">Dashboard</a>
       <a href="nations.html">Nations</a>
