--- a/admin/nations.html
+++ b/admin/nations.html
@@ -1,8 +1,9 @@
 <!-- nations.html
      Summary: Admin page for creating and editing nations with flag emoji selection.
-     Structure: navbar with profile menu, sidebar navigation and nation CRUD card.
-     Usage: Visit /admin/nations.html to manage nations. Choose a flag emoji from the list
-            to represent each nation. -->
+     Structure: navbar with profile menu, sidebar navigation and a card containing a
+                table of nations and a form for adding/updating entries.
+     Usage: Visit /admin/nations.html to manage nations. Choose a flag emoji from the
+            autocomplete list to represent each nation. -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -41,9 +42,15 @@
       <section class="card">
         <h2>Nations</h2>
         <p class="instructions">Add, edit or delete nations. Select a flag emoji to represent each nation.</p>
-        <div id="nationList"></div>
+        <table id="nationTable">
+          <thead>
+            <tr><th>Flag</th><th>Name</th><th>Actions</th></tr>
+          </thead>
+          <tbody id="nationList"></tbody>
+        </table>
         <input id="nationName" placeholder="Name">
         <input id="nationFlag" placeholder="Flag" list="flagOptions">
+        <span class="field-desc">Start typing a country name to pick its flag.</span>
         <datalist id="flagOptions"></datalist>
         <button id="addNationBtn">Add Nation</button>
       </section>
