--- a/admin/settings.html
+++ b/admin/settings.html
@@ -1,7 +1,11 @@
 <!-- settings.html
-     Summary: Placeholder admin page for future game settings.
-     Structure: navbar with profile menu, sidebar navigation and settings card.
-     Usage: Visit /admin/settings.html to modify game options. -->
+     Summary: Admin page for configuring global game options including camera
+              behaviour. Allows tweaking the default third-person camera height
+              and distance.
+     Structure: navbar with profile menu, sidebar navigation and settings card
+                containing camera controls.
+     Usage: Visit /admin/settings.html to adjust camera defaults which are
+            stored in localStorage and applied to new player sessions. -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -39,7 +43,16 @@
     <main id="mainContent">
       <section class="card">
         <h2>Game Settings</h2>
-        <p>Additional configuration options will appear here.</p>
+        <p>Adjust the default player camera. Values are saved per-browser.</p>
+        <div class="field">
+          <label for="cameraTargetHeight">Camera Target Height (m)</label>
+          <input id="cameraTargetHeight" type="number" min="0" max="10" step="0.1" />
+        </div>
+        <div class="field">
+          <label for="cameraDistance">Default Camera Distance (m)</label>
+          <input id="cameraDistance" type="number" min="5" max="20" step="0.5" />
+        </div>
+        <button id="saveCameraSettings">Save Camera Settings</button>
       </section>
     </main>
   </div>
