Add robust terrain editor handling

--- a/admin/terrain.html
+++ b/admin/terrain.html
@@ -44,6 +44,7 @@
         <h2>Terrain</h2>
         <p class="instructions">Manage saved maps. Click Add to create a new map or Edit to modify.</p>
         <button id="newTerrainBtn">Add Map</button>
+        <p id="noTerrainMsg" class="instructions" style="display:none">No terrains loaded. Click 'Add Map' to open editor.</p>
         <table id="terrainTable">
           <thead>
             <tr><th>Preview</th><th>Type</th><th>Size (km)</th><th>Name</th><th>Actions</th></tr>
