--- a/admin/terrain.html
+++ b/admin/terrain.html
@@ -3,7 +3,7 @@
               elevation and capture-the-flag positions via dedicated tool tabs. Includes Perlin-noise
               generator and camera controls. Preview updates automatically when map settings change.
      Structure: navbar & profile menu -> sidebar navigation -> map table -> terrain editor with
-                settings panel, tool tabs and Plotly 3D preview.
+                settings panel, tool tabs and Plotly 3D preview with CDN/library fallbacks.
      Usage: Visit /admin/terrain.html to manage terrains and design custom maps. -->
 <!DOCTYPE html>
 <html lang="en">
@@ -180,7 +180,10 @@
     </main>
   </div>
 
-  <script src="https://cdn.plot.ly/plotly-2.29.1.min.js"></script>
+  <script src="https://cdn.plot.ly/plotly-3.1.0.min.js"
+          onerror="this.onerror=null;this.src='/libs/plotly-3.1.0.min.js';"></script>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js@4.5.0/dist/chart.umd.min.js"
+          onerror="this.onerror=null;this.src='/libs/chart-4.5.0.min.js';"></script>
   <script type="module" src="admin.js"></script>
   <script type="module" src="terrain-editor.js"></script>
 </body>
