feat(admin): add prototype tank CRUD tab

--- a/admin/tanks.html
+++ b/admin/tanks.html
@@ -40,6 +40,7 @@
       <a href="admin.html">Dashboard</a>
       <a href="nations.html">Nations</a>
       <a href="tanks.html">Tanks</a>
+      <a href="tank-crud.html">Tank CRUD</a>
       <a href="ammo.html">Ammo</a>
       <a href="terrain.html">Terrain</a>
       <a href="users.html">Users</a>
